# finhelp-guard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LIMITATIONS.md  NOTICE  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements-integration.txt  requirements.txt
.github/workflows/: tests.yml
data/: eval_dev.jsonl  eval_heldout.jsonl  eval_set.jsonl  kb_synthetic.jsonl
data/gold/: README.md  RUBRIC.md  annotator_a.jsonl  candidates.jsonl  judge_scores_advice.jsonl  judge_scores_grounded.jsonl  labeling_template.csv
docs/: live-run.md
docs/adr/: 0001-interval-bound-gating.md  0002-layered-rails-then-judge.md  0003-authorization-below-the-model.md  0004-pluggable-hybrid-retrieval.md
evals/: calibrate.py  kappa.py  make_gold.py  run_evals.py
finhelp_guard/: __init__.py  __main__.py  agent.py  audit.py  calibration.py  config.py  graph.py  guardrails_adapter.py  models.py  retrieve.py  stats.py  tools.py
finhelp_guard/rails/: __init__.py  base.py  groundedness.py  no_advice.py  pii.py
tests/: test_agent.py  test_calibration.py  test_dense_integration.py  test_eval_gate.py  test_guardrails_integration.py  test_models.py  test_rails.py  test_retrieve.py  test_security.py  test_stats.py
traces/: T-1.json  T-2.json  T-3.json
