[project]
name = "finhelp-guard"
version = "0.1.0"
description = "A portable eval + guardrail harness for a support-ops assistant at a regulated broker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 128
lint.select = ["E", "F", "W"]
lint.ignore = ["E741"]   # `l` as a loop var in tight JSONL-reading comprehensions is fine here
